--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: OhYoungTack
 description: Deep learning
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.jpeg
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/404.jpg
+
 
 #
 # Flags below are optional
